syntax = "proto3";

package com.yzl.framework.beam.proto;
service Simple {
    rpc sayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
